[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Mentor/mentor.gd" type="Script" id=1]
[ext_resource path="res://Utils/Action Buffer/action_buffer.gd" type="Script" id=2]
[ext_resource path="res://Utils/State Machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Mentor/States/Dash.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Mentor/caught.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Mentor/States/Idle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utils/Entity/Look Direction/look_direction.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Mentor/States/Run.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Mentor/States/Taunt.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Player/target_direction.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Mentor/mentor_input_handler.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Mentor/obstacle_rays.gd" type="Script" id=12]
[ext_resource path="res://Sprites/red_hood_by_legnops.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Player/sprite_pivot.gd" type="Script" id=14]
[ext_resource path="res://Utils/Entity/Animation Player/animation.gd" type="Script" id=17]
[ext_resource path="res://Utils/Floating Text/FloatingTextGenerator.tscn" type="PackedScene" id=18]

[sub_resource type="CapsuleShape" id=6]
radius = 0.2
height = 0.32

[sub_resource type="CylinderMesh" id=15]
top_radius = 0.2
bottom_radius = 0.2
height = 0.02

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.2, 0.36, 0.2 )

[sub_resource type="SphereShape" id=9]
radius = 1.5

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "dash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=12]
resource_name = "run"
length = 1.92
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8, 0.88, 0.96, 1.04, 1.12, 1.2, 1.28, 1.36, 1.44, 1.52, 1.6, 1.68, 1.76, 1.84 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=13]
resource_name = "taunt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Mentor" type="KinematicBody"]
collision_mask = 48
script = ExtResource( 1 )
max_speed = 500.0
friction = 10.0
acceleration = 5.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.36, 0 )
shape = SubResource( 6 )

[node name="Groundcast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 16

[node name="Shadow" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.2 )
cast_shadow = 3
mesh = SubResource( 15 )
material/0 = null

[node name="Caught" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36, 0 )
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 5 )
text_generator = NodePath("../SpritePivot/Text")

[node name="CollisionShape" type="CollisionShape" parent="Caught"]
shape = SubResource( 7 )

[node name="Dash" type="Area" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Dash"]
shape = SubResource( 9 )

[node name="Rays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36, 0 )
script = ExtResource( 12 )
cast_distance = 5.0
layers = [ 4, 5 ]

[node name="SpritePivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0.2 )
script = ExtResource( 14 )

[node name="Sprite3D" type="Sprite3D" parent="SpritePivot"]
offset = Vector2( 0, 24 )
pixel_size = 0.02
double_sided = false
texture = ExtResource( 13 )
hframes = 6
vframes = 7

[node name="Text" parent="SpritePivot" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86, 0 )

[node name="Input" type="Node" parent="."]
script = ExtResource( 11 )
rays_path = NodePath("../Rays")
state_machine_path = NodePath("../StateMachine")
dash_area_path = NodePath("../Dash")
safe_distance = 7.0
dash_cooldown = 2.0

[node name="Timer" type="Timer" parent="Input"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Buffer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Look" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Target" type="Node" parent="."]
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/dash = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/run = SubResource( 12 )
anims/taunt = SubResource( 13 )
script = ExtResource( 17 )
initial_animation = "idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" parent="StateMachine" instance=ExtResource( 6 )]
dependencies = {
"body": NodePath("../.."),
"input": NodePath("../../Input"),
"look": NodePath("../../Look"),
"target": NodePath("../../Target")
}
variables = {
"max_speed": 3.5
}

[node name="Run" parent="StateMachine" instance=ExtResource( 8 )]
dependencies = {
"body": NodePath("../.."),
"input": NodePath("../../Input"),
"look": NodePath("../../Look"),
"target": NodePath("../../Target")
}
variables = {
"max_speed": 3.5
}

[node name="Dash" parent="StateMachine" instance=ExtResource( 4 )]
dependencies = {
"body": NodePath("../.."),
"input": NodePath("../../Input"),
"look": NodePath("../../Look"),
"target": NodePath("../../Target")
}
variables = {
"dash_distance": 2.0,
"dash_duration": 0.3
}

[node name="Taunt" parent="StateMachine" instance=ExtResource( 9 )]
dependencies = {
"body": NodePath("../.."),
"input": NodePath("../../Input"),
"look": NodePath("../../Look"),
"target": NodePath("../../Target")
}

[connection signal="area_entered" from="Caught" to="Caught" method="_on_area_entered"]
[connection signal="body_entered" from="Dash" to="Input" method="_on_body_entered"]
[connection signal="timeout" from="Input/Timer" to="Input" method="_on_timeout"]
[connection signal="x_direction_changed" from="Look" to="SpritePivot" method="_on_direction_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="Input" method="_on_animation_finished"]
[connection signal="state_changed" from="StateMachine" to="AnimationPlayer" method="_on_StateMachine_state_changed"]
